# verbo-vivo-backend

./: .env  .gitignore  Cargo.toml  README.md
src/: main.rs
src/middlewaree/: auth.rs
src/models/: error.rs  mod.rs  user.rs  versiculo.rs
src/routes/: mod.rs  search.rs  users.rs
src/services/: jwt.rs  mod.rs  search_service.rs  users.rs
